# aoc2023

./: Cargo.toml  Makefile  README.md
day01/: Cargo.toml
day02/: Cargo.toml
day02/src/: lib.rs
day03/: Cargo.toml
day03/src/: lib.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs
day08/: Cargo.toml
day08/src/: lib.rs
day1/: Cargo.toml
day1/src/: lib.rs
