[workspace]
members = ["day*"]
resolver = "2"

[workspace.package]
authors = ["Nico Dinata <nicodnt@icloud.com>"]
edition = "2021"
homepage = "https://github.com/ndinata/aoc2023"
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/ndinata/aoc2023"

[workspace.dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
rstest = "0.18.2"
